--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container hover">
     <div class="split left">
       <h1>Playstation 5</h1>
       <a href="#" class="btn">Buy Now</a>
